--- a/2024/estagiarios/main.tex
+++ b/2024/estagiarios/main.tex
@@ -4,7 +4,7 @@
 \usepackage[brazil,english,portuguese]{babel}
 
 \usetheme{Warsaw}
-\title[Make a LaTeX presentation using Beamer]{Introduction  to Beamer\\How to make a presentation with LaTeX?}
+\title[Make a LaTeX presentation using Beamer]{Recepção\\How to make a presentation with LaTeX?}
 \author{Nadir Soualem -- Astozzia}
 \institute{Math-linux.com}
 \date{Jule 13, 2007}
