--- a/2024/estagiarios/main.tex
+++ b/2024/estagiarios/main.tex
@@ -4,19 +4,28 @@
 \usepackage[brazil,english,portuguese]{babel}
 
 \usetheme{Warsaw}
-\title[Make a LaTeX presentation using Beamer]{Recepção\\How to make a presentation with LaTeX?}
-\author{Nadir Soualem -- Astozzia}
-\institute{Math-linux.com}
-\date{Jule 13, 2007}
+\usecolortheme{crane}
+
+\setbeamercolor{alerted text}{fg=black} %change the font color
+\setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
+
+\title[Recepção Estagiárias e Estagiários]{Recepção Estagiárias e Estagiários\\Seção Técnica de Informática}
+\author{Thiago Gomes Veríssimo}
+\institute{Faculdade de Filosofia, Letras e Ciências Humanas\\Universidade de São Paulo}
+\date{10 de Junho de 2024}
+
 \begin{document}
 
 \begin{frame}
 \titlepage
 \end{frame}
 
+%\begin{frame}{Outline}
+%    \tableofcontents
+%\end{frame}
 
-\begin{frame}{Introduction}
-This is a short introduction to Beamer class.
-\end{frame}
+\input{sections/1-estrutura}
+\input{sections/2-espaco}
+\input{sections/3-dinamica}
 
 \end{document}
