--- a/model/main.tex
+++ b/model/main.tex
@@ -4,19 +4,32 @@
 \usepackage[brazil,english,portuguese]{babel}
 
 \usetheme{Warsaw}
-\title[Make a LaTeX presentation using Beamer]{Introduction  to Beamer\\How to make a presentation with LaTeX?}
-\author{Nadir Soualem -- Astozzia}
-\institute{Math-linux.com}
-\date{Jule 13, 2007}
+\usecolortheme{crane}
+
+\setbeamercolor{alerted text}{fg=black} %change the font color
+\setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
+
+\title[Modelo para apresentações]{Modelo para apresentações\\Tecnologias}
+\author{Thiago Gomes Veríssimo}
+\institute{Universidade de São Paulo}
+\date{05 de Junho de 2024}
+
 \begin{document}
 
 \begin{frame}
 \titlepage
 \end{frame}
 
+\begin{frame}{Outline}
+    \tableofcontents
+\end{frame}
 
-\begin{frame}{Introduction}
-This is a short introduction to Beamer class.
+\input{sections/1-introduction}
+\input{sections/2-methodology}
+
+\begin{frame}{Bibliography}
+    \bibliographystyle{apalike2}
+    \bibliography{bibliography}
 \end{frame}
 
 \end{document}
