--- a/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
@@ -1,14 +1,28 @@
 \section{Methodology}
 
 \begin{frame}{Methodology}
-    metodologia
+    Our goal is to create a plugin that provides a schema for saving external data locally. 
+    This plugin will enable the creation of new indicators and targets based on the data it stores.
 \end{frame}
 
-\subsection{O experimento}
-
-\begin{frame}{Montagem}
+\begin{frame}{Plugin data}
     \begin{itemize}[<+-|alert@+>]\color{gray}
-        \item opção 1
-        \item opção 2
+        \item Gender
+        \item Race
+        \item City
+        \item Grade
+        \item Admission method
+        \item Scholarship received
+        \item Employment status (whether the student has an external job)
+        \item Reprobations (failed subjects)
+        \item Socioeconomic data
     \end{itemize}
 \end{frame}
+
+%\begin{frame}{plugin}
+%   %% Our plugin needs to implement an analyser class to prepare data for indicators and targets.
+%    \begin{lstlisting}[language=Java]
+%        // single line comment
+%    \end{lstlisting}
+%\end{frame}
+
