--- a/2024/LAP-Learning-Analytics-in-Practice/bibliography.bib
+++ b/2024/LAP-Learning-Analytics-in-Practice/bibliography.bib
@@ -1,6 +1,9 @@
-@book{byron2012usingdrupal,
-  title={Using drupal},
-  author={Byron, Angela and Berry, Addison and De Bondt, Bruno},
-  year={2012},
-  publisher={" O'Reilly Media, Inc."}
+@article{park2015development,
+  title={Development of the Learning Analytics Dashboard to Support Students' Learning Performance.},
+  author={Park, Yeonjeong and Jo, Il-Hyun},
+  journal={J. Univers. Comput. Sci.},
+  volume={21},
+  number={1},
+  pages={110--133},
+  year={2015}
 }
