--- a/2024/LAP-Learning-Analytics-in-Practice/main.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/main.tex
@@ -6,6 +6,34 @@
 \usetheme{Warsaw}
 \usecolortheme{crane}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%
+
 \setbeamercolor{alerted text}{fg=black} %change the font color
 \setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
 
@@ -26,6 +54,7 @@
 
 \input{sections/1-introduction}
 \input{sections/2-methodology}
+\input{sections/3-discussion}
 
 \begin{frame}{Bibliography}
     \bibliographystyle{apalike2}
