--- a/2024/LAP-Learning-Analytics-in-Practice/sections/1-introduction.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/1-introduction.tex
@@ -25,7 +25,9 @@
 \subsection{Research Questions}
 \begin{frame}{Research Questions}
     \begin{enumerate}[<+-|alert@+>]\color{gray}
-        \item What are the methods for integrating external data related to students, and what privacy concerns arise from this data?
-        \item Should this data be used as input for statistical and machine learning models to present information to students in dashboards?
+        \item What kind of external data can be usefully and safely integrated with 
+              the Moodle (behavioral) data?
+        \item How this enriched data can be used as features for statistical and 
+              machine learning models respecting privacy and student autonomy in dashboards?
     \end{enumerate}
 \end{frame}
