--- a/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
@@ -9,12 +9,11 @@
     \begin{itemize}[<+-|alert@+>]\color{gray}
         \item Gender
         \item Race
-        \item City
-        \item Grade
-        \item Admission method
-        \item Scholarship received
+        \item Address (time spent in commuting)
+        \item Academic History
+        \item Admission information (racial quota, entrance exam results)
+        \item Student Aid and Scholarships
         \item Employment status (whether the student has an external job)
-        \item Reprobations (failed subjects)
         \item Socioeconomic data
     \end{itemize}
 \end{frame}
