--- a/2024/LAP-Learning-Analytics-in-Practice/sections/3-discussion.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/3-discussion.tex
@@ -3,14 +3,14 @@
 \begin{frame}{Discussion}
     Storing sensitive student data, such as gender, race, city, grade, admission method, 
     scholarship status, employment status, reprobations, and socioeconomic information, 
-    in plugin tables requires careful consideration of data security and privacy. 
-    Some possibel isses:
+    in plugin tables requires careful consideration of data security and 
+    privacy (in human rights sense). 
+    Some possible isses:
     \begin{itemize}[<+-|alert@+>]\color{gray}
         \item Compliance with Regulations: Ensure compliance with data protection regulations, such as GDPR, FERPA, or other relevant laws
         \item Access Control
+        \item User Consent, Transparency
         \item Secure Coding Practices
-        \item User Consent
-        \item Transparency
     \end{itemize}
     
 \end{frame}
