--- a/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
@@ -1,8 +1,13 @@
 \section{Methodology}
 
 \begin{frame}{Methodology}
-    Our goal is to create a plugin that provides a schema for saving external data locally. 
-    This plugin will enable the creation of new indicators and targets based on the data it stores.
+    Our approach was to create a plugin to handle our questions:
+
+    \begin{enumerate}
+        \item A local schema for saving external data locally
+        \item New indicators and targets based on the data stored by plugin.
+    \end{enumerate}
+
 \end{frame}
 
 \begin{frame}{Plugin data}
