--- a/2024/LAP-Learning-Analytics-in-Practice/main.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/main.tex
@@ -4,41 +4,17 @@
 \usepackage[brazil,english,portuguese]{babel}
 
 \usetheme{Warsaw}
-\usecolortheme{crane}
 
+%\usecolortheme{crane}
+\usecolortheme{owl}
 
-%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{listings}
-\usepackage{color}
-
-\definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
-
-\lstset{frame=tb,
-  language=Java,
-  aboveskip=3mm,
-  belowskip=3mm,
-  showstringspaces=false,
-  columns=flexible,
-  basicstyle={\small\ttfamily},
-  numbers=none,
-  numberstyle=\tiny\color{gray},
-  keywordstyle=\color{blue},
-  commentstyle=\color{dkgreen},
-  stringstyle=\color{mauve},
-  breaklines=true,
-  breakatwhitespace=true,
-  tabsize=3
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%
-
-\setbeamercolor{alerted text}{fg=black} %change the font color
+\setbeamertemplate{background canvas}[vertical shading][bottom=darkgray,top=black]
 \setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
+\setbeamercolor{alerted text}{fg=blue} %change the font color
+
 
 \title[Enhancing Moodle with External Data Integration]{Enhancing Moodle with External Data Integration:\\A Case Study at the University of São Paulo}
-\author{Thiago Gomes Veríssimo\\Ewout ter Haar\\Paulo Roberto Miranda Meirelles}
+\author{Thiago Gomes Veríssimo \\ Ewout ter Haar \\ Paulo Roberto Miranda Meirelles}
 \institute{University of São Paulo}
 \date{19 June 2024}
 
