--- a/2024/LAP-Learning-Analytics-in-Practice/bibliography.bib
+++ b/2024/LAP-Learning-Analytics-in-Practice/bibliography.bib
@@ -1,9 +1,6 @@
-@article{park2015development,
-  title={Development of the Learning Analytics Dashboard to Support Students' Learning Performance.},
-  author={Park, Yeonjeong and Jo, Il-Hyun},
-  journal={J. Univers. Comput. Sci.},
-  volume={21},
-  number={1},
-  pages={110--133},
-  year={2015}
+@book{lang2017handbook,
+  title={Handbook of learning analytics},
+  author={Lang, Charles and Siemens, George and Wise, Alyssa and Gasevic, Dragan},
+  year={2017},
+  publisher={SOLAR, Society for Learning Analytics and Research New York}
 }
