--- a/2024/LAP-Learning-Analytics-in-Practice/main.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/main.tex
@@ -3,6 +3,8 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[brazil,english,portuguese]{babel}
 
+\usepackage{graphicx,wrapfig}
+
 \usetheme{Warsaw}
 
 %\usecolortheme{crane}
@@ -11,7 +13,6 @@
 \setbeamertemplate{background canvas}[vertical shading][bottom=darkgray,top=black]
 \setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
 \setbeamercolor{alerted text}{fg=blue} %change the font color
-
 
 \title[Enhancing Moodle with External Data Integration]{Enhancing Moodle with External Data Integration:\\A Case Study at the University of São Paulo}
 \author{Thiago Gomes Veríssimo \\ Ewout ter Haar \\ Paulo Roberto Miranda Meirelles}
@@ -31,6 +32,7 @@
 \input{sections/1-introduction}
 \input{sections/2-methodology}
 \input{sections/3-discussion}
+\input{sections/4-conclusion}
 
 \begin{frame}{Bibliography}
     \bibliographystyle{apalike2}
