--- a/2024/LAP-Learning-Analytics-in-Practice/sections/1-introduction.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/1-introduction.tex
@@ -13,7 +13,7 @@
 
     on ways to enrich the information available about learners 
     in the Moodle learning management system by incorporating external data sources.
-    \cite{park2015development}
+    \cite{lang2017handbook}
 \end{frame}
 
 \subsection{Context}
