--- a/model/main.tex
+++ b/model/main.tex
@@ -4,10 +4,12 @@
 \usepackage[brazil,english,portuguese]{babel}
 
 \usetheme{Warsaw}
-\usecolortheme{crane}
+%\usecolortheme{crane}
+\usecolortheme{owl}
 
-\setbeamercolor{alerted text}{fg=black} %change the font color
+\setbeamertemplate{background canvas}[vertical shading][bottom=darkgray,top=black]
 \setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
+\setbeamercolor{alerted text}{fg=blue} %change the font color
 
 \title[Modelo para apresentações]{Modelo para apresentações\\Tecnologias}
 \author{Thiago Gomes Veríssimo}
