--- a/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
@@ -31,7 +31,7 @@
         \item Student Aid and Scholarships
         \item Employment status (whether the student has an external job)
         \item Socioeconomic data
-        \item Frequency of book checkouts on University Library
+        \item Frequency of book checkouts at University Library
     \end{itemize}
 \end{frame}
 
