--- a/2024/LAP-Learning-Analytics-in-Practice/sections/3-discussion.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/3-discussion.tex
@@ -11,7 +11,7 @@
         \begin{minipage}{.7\textwidth}
             Storing sensitive student data, as in the previous case, requires careful consideration 
             of data security and privacy (in human rights sense). 
-            Some possible isses:
+            Some possible issues:
         \end{minipage}
     \end{figure}
 
