--- a/2024/LAP-Learning-Analytics-in-Practice/sections/4-conclusion.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/4-conclusion.tex
@@ -1,3 +1,5 @@
+\section{Conclusion}
+
 \begin{frame}{Conclusion}
     This is a work-in-progress project where we propose to place students in the role of 
     decision-makers to gather insights from prediction models. 
