--- a/model/main.tex
+++ b/model/main.tex
@@ -10,11 +10,23 @@
 \setbeamertemplate{background canvas}[vertical shading][bottom=darkgray,top=black]
 \setbeamerfont{alerted text}{series=\bfseries} %make alerted text bold
 \setbeamercolor{alerted text}{fg=blue} %change the font color
+\setbeamertemplate{footline}[frame number]%numerar página
 
+
+% capa
+\setbeamerfont{author}{size=\scriptsize,series=\bfseries,parent=structure}
+\setbeamerfont{date}{size=\scriptsize,series=\bfseries,parent=structure}
 \title[Modelo para apresentações]{Modelo para apresentações\\Tecnologias}
 \author{Thiago Gomes Veríssimo}
 \institute{Universidade de São Paulo}
 \date{05 de Junho de 2024}
+
+% logo of my university
+\titlegraphic{
+    \small Learning Analytics in Practice 2024
+    \includegraphics[width=2cm]{../../images/logo_usp_branco.png}\hspace*{4.75cm}~%
+    \includegraphics[width=2cm]{../../images/lap24.png}
+}
 
 \begin{document}
 
