--- a/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/2-methodology.tex
@@ -1,7 +1,7 @@
 \section{Methodology}
 
 \begin{frame}{Methodology}
-    Our approach was to create a Moodle plugin with the following capabilities to handle our Research Questions:
+    Our approach is to create a Moodle plugin with the following capabilities to handle our Research Questions:
 
     \begin{figure}
         \centering
@@ -10,7 +10,7 @@
           \includegraphics[width=0.99\textwidth]{../../images/quebracabeca.png}
         \end{minipage}%
         \begin{minipage}{.7\textwidth}
-            \begin{enumerate}
+            \begin{enumerate}[<alert@+>]\color{gray}
                 \item Plugin tables for storing external data locally
                 \item PHP routines to populate external data into plugin tables
                 \item New Indicators and Target classes that use the data stored by the plugin
@@ -20,18 +20,19 @@
     \end{figure}
 \end{frame}
 
+
 \begin{frame}{Information Systems}
     Some data stored in external University Information Systems:
-    \begin{itemize}[<+-|alert@+>]\color{gray}
+    \begin{itemize}[<alert@+>]\color{gray}
+        \item Academic History
+        \item Admission information (social/racial quota, entrance exam results)
+        \item Student Aid and Scholarships
+        \item Address (time spent in commuting)
         \item Gender
         \item Race
-        \item Address (time spent in commuting)
-        \item Academic History
-        \item Admission information (racial quota, entrance exam results)
-        \item Student Aid and Scholarships
-        \item Employment status (whether the student has an external job)
         \item Socioeconomic data
         \item Frequency of book checkouts at University Library
+        \item Employment status (whether the student has an external job)
     \end{itemize}
 \end{frame}
 
