--- a/2024/LAP-Learning-Analytics-in-Practice/sections/3-discussion.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/3-discussion.tex
@@ -15,8 +15,8 @@
         \end{minipage}
     \end{figure}
 
-    \begin{itemize}[<+-|alert@+>]\color{gray}
-        \item Compliance with Regulations: Ensure compliance with data protection regulations, such as GDPR, FERPA, or other relevant laws
+    \begin{itemize}[<alert@+>]\color{gray}
+        \item Compliance with Regulations: Ensure compliance with data protection regulations, such as GDPR, LGPD (Brazil), or other relevant laws
         \item Access Control
         \item User Consent, Transparency
         \item Secure Coding Practices
@@ -25,7 +25,7 @@
 \end{frame}
 
 \begin{frame}{Our proposal}
-    The traditional approach used to build dashboards (we are currently confirming through a systematic review):
+    The traditional approach used to build dashboards (we are currently confirming through a Systematic Literature Review):
 
     \begin{table}[]
         \begin{tabular}{|l|l|l|} \hline
@@ -37,14 +37,14 @@
     \end{table}
 
     \pause
-    Our proposal: Student in Control Perspective
+    Our proposal: Student \underline{in Control} Perspective
     \pause
     \begin{table}[]
         \begin{tabular}{|l|l|l|} \hline
-                 & Can choose Features? & Can see Predictions?    \\ \hline
-         Student & \textbf{Yes}         & \textbf{Yes}            \\ \hline
-         Teacher & No                   & Maybe (student decides) \\ \hline
-         Manager & No                   & No                      \\ \hline
+                 & Can choose Features?  & Can see Predictions?                    \\ \hline
+         Student & \textcolor{red}{Yes}  & \textcolor{red}{Yes}                    \\ \hline
+         Teacher & No                    & \textcolor{blue}{Maybe} (student decides) \\ \hline
+         Manager & No                    & \textcolor{blue}{Maybe} (student decides) \\ \hline
         \end{tabular}
     \end{table}
 
