--- a/2024/LAP-Learning-Analytics-in-Practice/sections/4-conclusion.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/sections/4-conclusion.tex
@@ -3,10 +3,23 @@
 \begin{frame}{Conclusion}
     This is a work-in-progress project where we propose to place students in the role of 
     decision-makers to gather insights from prediction models. 
-    Moreover, students will decide what data should be included or excluded from the model. 
+    \\
+    Moreover, students will decide what data should be included or excluded from the model.
+    \\
     This approach involves addressing several software engineering issues.
-    \pause
 
-    \center{\textbf{Thank you!}}
+    \begin{table}[]
+        \begin{tabular}{|l|l|l|} \hline
+                 & Can choose Features?  & Can see Predictions?                    \\ \hline
+         Student & \textcolor{red}{Yes}  & \textcolor{red}{Yes}                    \\ \hline
+         Teacher & No                    & \textcolor{blue}{Maybe} (student decides) \\ \hline
+         Manager & No                    & \textcolor{blue}{Maybe} (student decides) \\ \hline
+        \end{tabular}
+    \end{table}
+\end{frame}
+
+
+\begin{frame}{Conclusion}
+    \center{\huge Thank you!}
 \end{frame}
 
