--- a/2024/LAP-Learning-Analytics-in-Practice/main.tex
+++ b/2024/LAP-Learning-Analytics-in-Practice/main.tex
@@ -16,20 +16,20 @@
 \setbeamertemplate{footline}[frame number]%numerar página
 
 %%% capa
+\logo{\includegraphics[width=2cm]{../../images/lap24.png}}
 \setbeamerfont{author}{size=\scriptsize,series=\bfseries,parent=structure}
 \setbeamerfont{date}{size=\scriptsize,series=\bfseries,parent=structure}
 
 \title[Enhancing Moodle with External Data Integration]{Enhancing Moodle with External Data Integration:\\A Case Study at the University of São Paulo}
 \author{Thiago Gomes Veríssimo \\ Ewout ter Haar \\ Paulo Roberto Miranda Meirelles}
-\institute{University of São Paulo}
-\date{19 June 2024}
+%\institute{University of São Paulo}
 
-% logo of my university
-\titlegraphic{
-    \small Learning Analytics in Practice 2024
+\institute{University of São Paulo (USP) - Institute of Mathematics and Statistics (IME)\\[\medskipamount]
     \includegraphics[width=2cm]{../../images/logo_usp_branco.png}\hspace*{4.75cm}~%
-    \includegraphics[width=2cm]{../../images/lap24.png}
+    \includegraphics[width=2cm]{../../images/ime.png}
 }
+\date{19 June 2024}
+\titlegraphic{\small Learning Analytics in Practice 2024}
 
 \begin{document}
 
