--- a/2024/third-pitch/main.tex
+++ b/2024/third-pitch/main.tex
@@ -11,9 +11,9 @@
 \titlepage
 \end{frame}
 
-\begin{frame}{Outline}
-    \tableofcontents
-\end{frame}
+%\begin{frame}{Outline}
+%    \tableofcontents
+%\end{frame}
 
 \input{sections/1-introduction}
 \input{sections/2-methodology}
