--- a/2024/third-pitch/sections/0-first.tex
+++ b/2024/third-pitch/sections/0-first.tex
@@ -2,7 +2,7 @@
 %\usecolortheme{crane}
 \usecolortheme{owl}
 
-\logo{\includegraphics[width=2cm]{../../images/lap24.png}}
+\logo{\includegraphics[width=2cm]{../../images/ime.png}}
 
 \setbeamertemplate{background canvas}[vertical shading][bottom=darkgray,top=black]
 
@@ -13,13 +13,14 @@
 \setbeamercolor{alerted text}{fg=blue} %change the font color
 \setbeamertemplate{footline}[frame number]%numerar página
 
-\title[Enhancing Moodle with External Data Integration]{Enhancing Moodle with External Data Integration:\\A Case Study at the University of São Paulo}
-\author{Thiago Gomes Veríssimo \\ Adviser: Paulo Meirelles\\ Co-Adviser: Ewout ter Haar}
+\title[Learning Analytics Dashboard on Moodle]{Learning Analytics Dashboard on Moodle:
+\\An approach for the student in a control perspective}
+\author{Thiago Gomes Veríssimo \\ Advisor: Paulo Meirelles\\ Co-Advisor: Ewout ter Haar}
 
 \institute{University of São Paulo (USP) - Institute of Mathematics and Statistics (IME)\\[\medskipamount]
-    \includegraphics[width=2cm]{../../images/logo_usp_branco.png}\hspace*{4.75cm}~%
-    \includegraphics[width=2cm]{../../images/ime.png}
+    \includegraphics[width=2cm]{../../images/logo_usp_branco.png}
+    %\includegraphics[width=2cm]{../../images/ime.png}
 }
 \date{19 June 2024}
 
-\titlegraphic{\small Learning Analytics in Practice 2024}
+\titlegraphic{\small Third Pitch}
