--- a/2024/third-pitch/sections/2-methodology.tex
+++ b/2024/third-pitch/sections/2-methodology.tex
@@ -1,42 +1,7 @@
-\section{Introduction}
+\section{Methodology}
 
-\begin{frame}{Context}
-    To study, scientifically, the construction of Learning Analytics Dashboards and related software engineering issues
-
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.5\textwidth]{../../images/digital_learning.jpg}
-        \caption{The data regarding the student learning process is dispersed across multiple sources} %\label{fig:digital_learning}}
-        \\ \small \url{https://www.flickr.com/photos/opensourceway/8288335386/}
-    \end{figure}
-
-    It is a Learning Analytics research field \cite{lang2017handbook}.
-\end{frame}
-
-\begin{frame}{Our proposal}
-    The traditional approach used to build dashboards (we are currently confirming through a Systematic Literature Review):
-
-    \begin{table}[]
-        \begin{tabular}{|l|l|l|} \hline
-                 & Can choose Features? & Can see Predictions?\\ \hline
-         Student & No                   & No                  \\ \hline
-         Teacher & No                   & Yes                 \\ \hline
-         Manager & Yes                  & Yes                 \\ \hline
-        \end{tabular}
-    \end{table}
-
-    \pause
-    Our proposal: Student \underline{in Control} Perspective
-    \pause
-    \begin{table}[]
-        \begin{tabular}{|l|l|l|} \hline
-                 & Can choose Features?  & Can see Predictions?                    \\ \hline
-         Student & \textcolor{red}{Yes}  & \textcolor{red}{Yes}                    \\ \hline
-         Teacher & No                    & \textcolor{blue}{Maybe} (student decides) \\ \hline
-         Manager & No                    & \textcolor{blue}{Maybe} (student decides) \\ \hline
-        \end{tabular}
-    \end{table}
-
+\begin{frame}{Methodology}
+    metodologia
 \end{frame}
 
 
@@ -170,3 +135,5 @@
 %
 %\cite{ferreira2012}
 %
+
+
