--- a/2024/third-pitch/main.tex
+++ b/2024/third-pitch/main.tex
@@ -3,6 +3,9 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[brazil,english,portuguese]{babel}
 
+% tabelas gerados em python
+\usepackage{booktabs}
+
 \input{sections/0-first}
 
 \begin{document}
@@ -17,6 +20,7 @@
 
 \input{sections/1-introduction}
 \input{sections/2-methodology}
+\input{sections/3-results}
 
 \begin{frame}{Bibliography}
     \bibliographystyle{apalike2}
