--- a/2024/third-pitch/sections/1-introduction.tex
+++ b/2024/third-pitch/sections/1-introduction.tex
@@ -1,14 +1,14 @@
 \section{Introduction}
 
 \begin{frame}{Context}
-    To study, scientifically, the construction of Learning Analytics Dashboards and related software engineering issues
+    Our aim is to study, scientifically, the construction of Learning Analytics Dashboards and related software engineering issues.
 
     \begin{figure}[H]
         \centering
-        \caption{The data regarding the student learning process is dispersed across multiple sources
-        \label{fig:digital_learning}}
+        \label{fig:digital_learning}
+        %\caption{The data regarding the student learning process is dispersed across multiple sources} 
         \includegraphics[width=0.5\textwidth]{../../images/digital_learning.jpg}
-        %\caption{The data regarding the student learning process is dispersed across multiple sources} }
+        \\ \small The data regarding the student learning process is dispersed across multiple sources
         \\ \small \url{https://www.flickr.com/photos/opensourceway/8288335386/}
     \end{figure}
 
