--- a/2024/third-pitch/sections/1-introduction.tex
+++ b/2024/third-pitch/sections/1-introduction.tex
@@ -17,7 +17,10 @@
 
 
 \begin{frame}{The journey up to this point}
-   TIME LINE
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=1\textwidth]{../../../thiago-doutorado-ime-usp/outputs/timeline.pdf}
+    \end{figure}
 \end{frame}
 
 \subsection{Research Questions}
