--- a/2024/third-pitch/main.tex
+++ b/2024/third-pitch/main.tex
@@ -21,6 +21,7 @@
 \input{sections/1-introduction}
 \input{sections/2-methodology}
 \input{sections/3-results}
+\input{sections/4-conclusion}
 
 \begin{frame}{Bibliography}
     \bibliographystyle{apalike2}
