--- a/2024/third-pitch/sections/1-introduction.tex
+++ b/2024/third-pitch/sections/1-introduction.tex
@@ -15,6 +15,15 @@
     It is a Learning Analytics research field \cite{lang2017handbook}.
 \end{frame}
 
+\begin{frame}{Advances since last pitch - July 2023}
+    \begin{itemize}[<alert@+>]\color{gray}
+        \item All credits class, in theory and systems, have been completed
+        \item PAE assistant (monitor) in MAC0110 
+        \item An extended abstract was accepted and published in \textbf{Frontiers in Education 2023}
+        \item I presented my work-in-progress project at \textbf{Learning Analytics in Practice 2024}
+        \item I performed a Tertiary Literature Review (will be presented)
+    \end{itemize}
+\end{frame}
 
 \begin{frame}{The journey up to this point}
     \begin{figure}[H]
