--- a/2024/third-pitch/sections/3-results.tex
+++ b/2024/third-pitch/sections/3-results.tex
@@ -1,9 +1,17 @@
+\section{Results}
+
 \begin{frame}{Tertiary Literature Review}
-    From the 189 articles found, 15 were selected. These were categorized as follows: 6 evaluated educational foundations, 6 did not use specific criteria in the review, 2 verified articles validating dashboard application, and only 1 evaluated whether EPs utilized machine learning mechanisms.
+    From the 189 articles found, 15 were selected:
+    \begin{itemize}[<alert@+>]\color{gray}
+        \item 6 did not use specific criteria in the review
+        \item 6 evaluated educational foundations
+        \item 2 was related to evaluating the dashboard
+        \item 1 was about using Machine Learning Models
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{Tertiary Literature Review - Results}
-    No review considered dashboards in Moodle LMS, and more broadly, none considered implementations in open-source code.
+    None of the articles selected in our tertiary review focused on dashboards within the Moodle environment, and more broadly, none considered implementations in open-source code
 
     \begin{figure}[H]
         \centering
@@ -13,13 +21,3 @@
 \end{frame}
 
 
-\begin{frame}{Qualification}
-    Our next step, up to \underline{qualification by the end of 2024}, will be to conduct a systematic review focusing on primary articles that have developed dashboards within the Moodle environment, with particular attention to the following aspects: 
-    
-    \begin{enumerate}[<alert@+>]\color{gray}
-        \item Use of machine learning in dashboards (and raising software engineering issues related to this)
-        \item Whether the code is available or not
-    \end{enumerate}
-
-
-\end{frame}
